# erfnet_ros

./: .gitignore  CMakeLists.txt  README.md  irp_requirement.txt  package.xml  setup.py
config/: rellis_3d.yaml
launch/: play_rosbag.launch  rellis_3d.launch
nodes/: erfnet_ros_node.py  testing_node.py
rviz/: erfnet_ros.rviz
src/erfnet_ros/: transform.py
