<?xml version="1.0"?>
<package format="2">
  <name>erfnet_ros</name>
  <version>1.0.0</version>
  <description>The erfnet_ros package</description>

  <maintainer email="tigaleung002@gmail.com">Tiga</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <depend>catkin_simple</depend>

</package>
